# mediatamer

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml  test_cli_metadata.py
doc/: CREDITS_MATCHING.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_STRATEGY.md  MATCHING_ANALYSIS.md  MKV_PARSERS.md  README_HandBrake.md  STATUS.md  SUBTITLE_CACHING.md  TASKS.md
mediatamer/: __init__.py  ai.py  ai_matcher.py  burn_metadata_into_mkv.py  cli.py  compress.py  config.py  extract_metada.py  extract_mkv_metadata.py  extract_subtitle.py  get_dvd_metadata.py  get_tv_shows_metadata.py  handbrake_batch_convert.sh  matcher.py  metadata.py  mkv_metadata.py  organize.py  parameters.py  utils.py
mediatamer/cli/: __init__.py  argparse_utils.py  cache_metadata.py  cache_subtitles.py  cli.py  compress.py  get_tv_shows_metadata.py  metadata.py  organize.py  validate.py
mediatamer/signals/: __init__.py  ai.py  ai_episode_matcher.py  ai_video_matcher.py  cache.py  cast_from_subtitles.py  context.py  credits_extractor.py  episode_matcher.py  ffprobe.py  filename.py  guessit.py  mediainfo.py  metadata_verifier.py  mkvmerge.py  opensubtitles.py  scoring.py  search_ovdb.py  subtitle.py  subtitle_hash.py  summary_from_subtitles.py  technical.py  tmdb.py  tvdb.py  unified.py  video_metadata.py
scripts/: cache_subtitles.py  debug_tmdb_person_search.py  inspect_ocr_cache.py  sandbox.py  verify_ai.py  verify_ai_speed.py
tests/: sandbox.py  test_subtitle_llm.py
tests/sandbox/: compare_cast_profile.py  compare_tmdb_vs_tvdb.py  sandbox_metadata_matcher.py  sandbox_search_person.py
(+16 files in other folders)
